added new problem solved

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
@@ -66,6 +66,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alpha = Beta = 2: Probability = 0.29600\n",
+      "Alpha = Beta = 3: Probability = 0.36512\n",
+      "Alpha = Beta = 4: Probability = 0.42042\n",
+      "Alpha = Beta = 5: Probability = 0.46686\n",
+      "Alpha = Beta = 6: Probability = 0.50700\n",
+      "Alpha = Beta = 7: Probability = 0.54231\n",
+      "Alpha = Beta = 8: Probability = 0.57379\n",
+      "Alpha = Beta = 9: Probability = 0.60213\n",
+      "Alpha = Beta = 10: Probability = 0.62782\n",
+      "Alpha = Beta = 11: Probability = 0.65124\n",
+      "Alpha = Beta = 12: Probability = 0.67271\n",
+      "Alpha = Beta = 13: Probability = 0.69246\n",
+      "Alpha = Beta = 14: Probability = 0.71070\n",
+      "Alpha = Beta = 15: Probability = 0.72757\n",
+      "Alpha = Beta = 16: Probability = 0.74324\n",
+      "Alpha = Beta = 17: Probability = 0.75780\n",
+      "Alpha = Beta = 18: Probability = 0.77137\n",
+      "Alpha = Beta = 19: Probability = 0.78404\n",
+      "Alpha = Beta = 20: Probability = 0.79588\n",
+      "Alpha = Beta = 21: Probability = 0.80697\n",
+      "Alpha = Beta = 22: Probability = 0.81735\n",
+      "Alpha = Beta = 23: Probability = 0.82710\n",
+      "Alpha = Beta = 24: Probability = 0.83625\n",
+      "Alpha = Beta = 25: Probability = 0.84485\n",
+      "Alpha = Beta = 26: Probability = 0.85294\n",
+      "Alpha = Beta = 27: Probability = 0.86056\n",
+      "Alpha = Beta = 28: Probability = 0.86774\n",
+      "Alpha = Beta = 29: Probability = 0.87451\n",
+      "Alpha = Beta = 30: Probability = 0.88090\n",
+      "Alpha = Beta = 31: Probability = 0.88692\n",
+      "Alpha = Beta = 32: Probability = 0.89262\n",
+      "Alpha = Beta = 33: Probability = 0.89800\n",
+      "Alpha = Beta = 34: Probability = 0.90309\n",
+      "Alpha = Beta = 35: Probability = 0.90790\n",
+      "Alpha = Beta = 36: Probability = 0.91245\n",
+      "Alpha = Beta = 37: Probability = 0.91676\n",
+      "Alpha = Beta = 38: Probability = 0.92085\n",
+      "Alpha = Beta = 39: Probability = 0.92471\n",
+      "Alpha = Beta = 40: Probability = 0.92838\n",
+      "Alpha = Beta = 41: Probability = 0.93185\n",
+      "Alpha = Beta = 42: Probability = 0.93515\n",
+      "Alpha = Beta = 43: Probability = 0.93827\n",
+      "Alpha = Beta = 44: Probability = 0.94124\n",
+      "Alpha = Beta = 45: Probability = 0.94406\n",
+      "Alpha = Beta = 46: Probability = 0.94673\n",
+      "Alpha = Beta = 47: Probability = 0.94926\n",
+      "Alpha = Beta = 48: Probability = 0.95167\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_beta_parameters():\n",
+    "    alpha_beta = 2\n",
+    "    while True:\n",
+    "        beta_dist = stats.beta(alpha_beta, alpha_beta)\n",
+    "        prob = beta_dist.cdf(0.6) - beta_dist.cdf(0.4)\n",
+    "        print(f\"Alpha = Beta = {alpha_beta}: Probability = {prob:.5f}\")\n",
+    "        if prob >= 0.95:\n",
+    "            break\n",
+    "        alpha_beta += 1\n",
+    "\n",
+    "find_beta_parameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
