added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
@@ -138,6 +138,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3:\n",
+    "#### Now see how many more heads (with no more tails) it would take to convince you that there is a reasonable chance that the coin is not fair. In this case, let’s say that this means that our belief in the rate of the coin being between 0.4 and 0.6 drops below 0.5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial probability of p between 0.4 and 0.6: 0.79588\n",
+      "After 10 more heads, the probability of p between 0.4 and 0.6 is 0.49013, which is below 50%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "alpha = beta = 20\n",
+    "heads_count = 0\n",
+    "\n",
+    "beta_dist = stats.beta(alpha, beta)\n",
+    "initial_prob = beta_dist.cdf(0.6) - beta_dist.cdf(0.4)\n",
+    "\n",
+    "print(f\"Initial probability of p between 0.4 and 0.6: {initial_prob:.5f}\")\n",
+    "\n",
+    "while True:\n",
+    "    heads_count += 1\n",
+    "\n",
+    "    new_alpha = alpha + heads_count\n",
+    "    beta_dist = stats.beta(new_alpha, beta)\n",
+    "    new_prob = beta_dist.cdf(0.6) - beta_dist.cdf(0.4)\n",
+    "\n",
+    "    if new_prob < 0.5:\n",
+    "        print(f\"After {heads_count} more heads, the probability of p between 0.4 and 0.6 is {new_prob:.5f}, which is below 50%.\")\n",
+    "        break"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
