added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Param-Estimation.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Param-Estimation.ipynb
@@ -15,11 +15,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining Expectation, Mean, and Averaging\n",
+    "\n",
+    "#### What we’ve arrived at here is formally called the expectation or mean of our data. It is simply the sum of each value weighted by its probability. If we denote each of our measurements as xi and the probability of each measurement as pi, we mathematically define the mean—which is generally represented by μ (the lowercase Greek letter mu)—as follows:\n",
+    "\n",
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/mean-avg.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Means for Measurement vs. Means for Summary\n",
+    "#### We’ve been using our mean to estimate a true measurement from a distribution of observations with some added error. But the mean is often used as a way to summarize a set of data. For example, we might refer to things like:\n",
+    "\n",
+    "- The mean height of a person\n",
+    "- The average price of a home\n",
+    "- The average age of a student"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
