added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Param-Estimation.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Param-Estimation.ipynb
@@ -45,6 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1:\n",
+    "#### It’s possible to get errors that don’t quite cancel out the way we want. In the Fahrenheit temperature scale, 98.6 degrees is the normal body temperature and 100.4 degrees is the typical threshold for a fever. Say you are taking care of a child that feels warm and seems sick, but you take repeated readings from the thermometer and they all read between 99.5 and 100.0 degrees: warm, but not quite a fever. You try the thermometer yourself and get several readings between 97.5 and 98. What could be wrong with the thermometer?\n",
+    "\n",
+    "#### It looks like the thermometer might be giving biased measurements that tend to be off by 1 degree F. If you added 1 degree to your results, you’d see that they were between 98.5 and 99, which seems correct for someone that normally has a 98.6 degree body temperature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
