added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Measuring-Spread.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Measuring-Spread.ipynb
@@ -20,10 +20,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Finding the Variance\n",
+    "#### Another way to mathematically make all of our differences positive without invalidating the data is to square them: (xi – μ)2. This method has at least two benefits over using MAD.\n",
+    "\n",
+    "#### The first benefit is a bit academic: squaring values is much easier to work with mathematically than taking their absolute value. In this book, we won’t take advantage of this directly, but for mathematicians, the absolute value function can be a bit annoying in practice.\n",
+    "\n",
+    "#### The second, and more practical, reason is that squaring results in having an exponential penalty, meaning measurements very far away from the mean are penalized much more. In other words, small differences aren’t nearly as important as big ones, as we would feel intuitively. If someone scheduled your meeting in the wrong room, for example, you wouldn’t be too upset if you ended up next door to the right room, but you’d almost certainly be upset if you were sent to an office on the other side of the countr\n",
+    "\n",
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/Var.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
