added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Measuring-Spread.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Measuring-Spread.ipynb
@@ -45,7 +45,9 @@
     "\n",
     "#### To fix this, we can take the square root of the variance in order to scale it back into a number that works with our intuition a bit better. The square root of a variance is called the standard deviation and is represented by the lowercase Greek letter sigma (σ). It is defined as follows:\n",
     "\n",
-    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/STD.jpg)"
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/STD.jpg)\n",
+    "\n",
+    "#### The standard deviation is a happy medium between the intuitiveness of MAD and the mathematical ease of variance. Notice that, just like with MAD, the difference in the spread between b and a is a factor of 10. The standard deviation is so useful and ubiquitous that, in most of the literature on probability and statistics, variance is defined simply as σ2, or sigma squared!"
    ]
   },
   {
