added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Normal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Normal-Dist.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### The true goal of parameter estimation isn’t simply to estimate a value, but rather to assign a probability for a range of possible values. This allows us to perform more sophisticated reasoning with uncertain values."
+   ]
   }
  ],
  "metadata": {
