added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
@@ -33,6 +33,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Estimating Confidence Intervals\n",
+    "\n",
+    "#### Looking at the probability of ranges of values leads us to a very important concept in probability: the confidence interval. A confidence interval is a lower and upper bound of values, typically centered on the mean, describing a range of high probability, usually 95, 99, or 99.9 percent. When we say something like “The 95 percent confidence interval is from 12 to 20,” what we mean is that there is a 95 percent probability that our true measurement is somewhere between 12 and 20. Confidence intervals provide a good method of describing the range of possibilities when we’re dealing with uncertain information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
