added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
@@ -50,20 +50,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## CDF VS PDF\n",
+    "\n",
+    "#### Key Difference: The PDF describes the probability density at a given value, while the CDF provides the cumulative probability up to that value. In simple terms, the PDF tells you the relative likelihood of the random variable at a precise value, and the CDF tells you the likelihood of the random variable being less than or equal to a certain value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 2:\n",
     "\n",
     "#### Returning to the task of measuring snowfall from Chapter 10, say you have the following measurements (in inches) of snowfall: 7.8, 9.4, 10.0, 7.9, 9.4, 7.0, 7.0, 7.1, 8.9, 7.4 What is your 99.9 percent confidence interval for the true value of snowfall?"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.9% Confidence Interval for the true mean snowfall: (6.474413856518159, 9.905586143481845)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "data = np.array([7.8, 9.4, 10.0, 7.9, 9.4, 7.0, 7.0, 7.1, 8.9, 7.4])\n",
+    "\n",
+    "mean_snowfall = np.mean(data)\n",
+    "std_snowfall = np.std(data, ddof=1)\n",
+    "n = len(data)\n",
+    "\n",
+    "t_critical = stats.t.ppf(0.9995, n-1)\n",
+    "\n",
+    "margin_error = t_critical * (std_snowfall /np.sqrt(n))\n",
+    "\n",
+    "confidence_interval = (mean_snowfall - margin_error, mean_snowfall + margin_error)\n",
+    "\n",
+    "\n",
+    "print(f\"99.9% Confidence Interval for the true mean snowfall: {confidence_interval}\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
