added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
@@ -96,6 +96,19 @@
     "\n",
     "print(f\"99.9% Confidence Interval for the true mean snowfall: {confidence_interval}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Two-Tailed Test/Interval: This involves looking for extreme values at both ends of the distribution. For a confidence interval, this means we're concerned with deviations from the mean in both directions—both above and below.\n",
+    "##### In the context of a 99.9% confidence interval for mean snowfall, saying it's \"two-tailed\" means we're considering the possibility that the true mean could be either significantly higher or significantly lower than our sample mean. Thus, we split our alpha level (the remaining 0.1% probability) between the lower and upper ends of the distribution, placing 0.05% in each tail."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
