added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
@@ -101,8 +101,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Using Normal Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99.9% Confidence Interval (Normal): (4.46, 11.92)\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower = stats.norm.ppf(0.0005, loc=mean_snowfall, scale=std_snowfall)\n",
+    "upper = stats.norm.ppf(0.9995, loc=mean_snowfall, scale=std_snowfall)\n",
+    "\n",
+    "print(f\"99.9% Confidence Interval (Normal): ({lower:.2f}, {upper:.2f})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Two-Tailed Test/Interval: This involves looking for extreme values at both ends of the distribution. For a confidence interval, this means we're concerned with deviations from the mean in both directions—both above and below.\n",
     "##### In the context of a 99.9% confidence interval for mean snowfall, saying it's \"two-tailed\" means we're considering the possibility that the true mean could be either significantly higher or significantly lower than our sample mean. Thus, we split our alpha level (the remaining 0.1% probability) between the lower and upper ends of the distribution, placing 0.05% in each tail."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3:\n",
+    "\n",
+    "#### A child is going door to door selling candy bars. So far she has visited 30 houses and sold 10 candy bars. She will visit 40 more houses today. What is the 95 percent confidence interval for how many candy bars she will sell the rest of the day?"
    ]
   },
   {
