added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Parameter-Estimation-Tools.ipynb
@@ -144,7 +144,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Standard Error (SE)\n",
+    "#### Definition: The standard error of a statistic (in this case, the sample proportion) measures the dispersion or variability of that statistic from the true population value. It quantifies the uncertainty inherent in estimating a population parameter from a sample."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% Confidence Interval for candy bars sold in next 40 houses: 12.48 to 14.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "p = 10/30\n",
+    "n = 30\n",
+    "\n",
+    "SE = np.sqrt(p * (1-p) /n )\n",
+    "\n",
+    "z = norm.pdf(0.975)\n",
+    "\n",
+    "MOE = z * SE\n",
+    "\n",
+    "CI_lower = p - MOE\n",
+    "CI_upper = p + MOE\n",
+    "\n",
+    "sales_lower = CI_lower * 40\n",
+    "sales_upper = CI_upper * 40\n",
+    "\n",
+    "print(f\"95% Confidence Interval for candy bars sold in next 40 houses: {sales_lower:.2f} to {sales_upper:.2f}\")"
+   ]
   }
  ],
  "metadata": {
