added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/A&B-Testing.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/A&B-Testing.ipynb
@@ -18,6 +18,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Exercise 3:\n",
+    "#### Assume that being 95 percent certain means that you’re more or less “convinced” of a hypothesis. Also assume that there’s no longer any limit to the number of emails you can send in your test. If the true conversion for A is 0.25 and for B is 0.3, explore how many samples it would take to convince the director of marketing that B was in fact superior. Explore the same for the lead designer. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
