added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/A&B-Testing.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/A&B-Testing.ipynb
@@ -25,10 +25,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Required sample size per group: 494.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "def compute_sample_size(p1, p2, alpha, power):\n",
+    "  \n",
+    "  p_pool = (p1+p2)/2\n",
+    "  std_pool = np.sqrt(p_pool * (1-p_pool))\n",
+    "  \n",
+    "  z_alpha = norm.ppf(1 - alpha)\n",
+    "  z_beta = norm.ppf(power)\n",
+    "  \n",
+    "  delta = p2 -p1\n",
+    "  n = (std_pool * ( z_beta + z_alpha) / delta) ** 2\n",
+    "  \n",
+    "  return np.ceil(n)\n",
+    "\n",
+    "alpha = 0.05  # Significance level\n",
+    "power = 0.8   # Desired power\n",
+    "p1 = 0.25     # Conversion rate for A\n",
+    "p2 = 0.3      # Conversion rate for B\n",
+    "\n",
+    "sample_size_per_group = compute_sample_size(p1, p2, alpha, power)\n",
+    "print(f\"Required sample size per group: {sample_size_per_group}\")"
+   ]
   }
  ],
  "metadata": {
@@ -38,7 +70,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
