added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
@@ -24,7 +24,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### What we have now is a ratio of how well each of our hypotheses explains the data we’ve observed. That is, if the ratio is 2, then H1 explains the observed data twice as well as H2, and if the ratio is 1/2, then H2 explains the data twice as well as H1.\n",
+    "\n",
+    "## Building a Hypothesis Test Using the Ratio of Posteriors\n",
+    "#### The ratio of posteriors formula gives us the posterior odds, which allows us to test hypotheses or beliefs we have about data. Even when we do know P(D), the posterior odds is a useful tool because it allows us to compare ideas. To better understand the posterior odds, we’ll break down the ratio of posteriors formula into two parts: the likelihood ratio, or the Bayes factor, and the ratio of prior probabilities. This is a standard, and very helpful, practice that makes it much easier to reason about the likelihood and the prior probability separately."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
