added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
@@ -35,8 +35,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## "
+    "## The Bayes Factor\n",
+    "#### Using the ratio of posteriors formula, let’s assume that P(H1) = P(H2)—that is, that our prior belief in each hypothesis is the same. In that case, the ratio of prior beliefs in the hypotheses is just 1, so all that’s left is:\n",
+    "\n",
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/pos-odds.jpg)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
