added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
@@ -38,7 +38,11 @@
     "## The Bayes Factor\n",
     "#### Using the ratio of posteriors formula, let’s assume that P(H1) = P(H2)—that is, that our prior belief in each hypothesis is the same. In that case, the ratio of prior beliefs in the hypotheses is just 1, so all that’s left is:\n",
     "\n",
-    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/pos-odds.jpg)"
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/pos-odds.jpg)\n",
+    "\n",
+    "## This is the Bayes factor, the ratio between the likelihoods of two hypotheses.\n",
+    "\n",
+    "#### Take a moment to really think about what this equation is saying. When we consider how we’re going to argue for our H1—that is, our belief about the world—we think about gathering evidence that supports our beliefs. A typical argument, therefore, involves building up a set of data, D1, that supports H1, and then arguing with a friend who has gathered a set of data, D2, that supports their hypothesis, H2."
    ]
   },
   {
