added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Hypothesis-Test-Post.ipynb
@@ -42,7 +42,11 @@
     "\n",
     "## This is the Bayes factor, the ratio between the likelihoods of two hypotheses.\n",
     "\n",
-    "#### Take a moment to really think about what this equation is saying. When we consider how we’re going to argue for our H1—that is, our belief about the world—we think about gathering evidence that supports our beliefs. A typical argument, therefore, involves building up a set of data, D1, that supports H1, and then arguing with a friend who has gathered a set of data, D2, that supports their hypothesis, H2."
+    "#### Take a moment to really think about what this equation is saying. When we consider how we’re going to argue for our H1—that is, our belief about the world—we think about gathering evidence that supports our beliefs. A typical argument, therefore, involves building up a set of data, D1, that supports H1, and then arguing with a friend who has gathered a set of data, D2, that supports their hypothesis, H2.\n",
+    "\n",
+    "#### In Bayesian reasoning, though, we’re not gathering evidence to support our ideas; we’re looking to see how well our ideas explain the evidence in front of us. What this ratio tells us is the likelihood of what we’ve seen given what we believe to be true compared to what someone else believes to be true. Our hypothesis wins when it explains the world better than the competing hypothesis.\n",
+    "\n",
+    "#### If, however, the competing hypothesis explains the data much better than ours, it might be time to change our beliefs. The key here is that in Bayesian reasoning, we don’t worry about supporting our beliefs—we are focused on how well our beliefs support the data we observe. In the end, data can either confirm our ideas or lead us to change our minds."
    ]
   },
   {
